# copyboard

./: ..gitignore.un~  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  SPEC.md  TASKS.md  TODO.md  config.json  pyproject.toml
.github/workflows/: tests.yml
copyboard/: __init__.py  __main__.py  config.py  config_loading.py
copyboard/adapters/: __init__.py  clipboardechoguard.py  processdetach.py  pynputhotkeybinder.py  systemclock.py  tempdirvault.py
copyboard/adapters/qt/: __init__.py  clippingdragdata.py  qtclipboard.py
copyboard/adapters/ui/: __init__.py  apptheme.py  clippingwidget.py  mainwindow.py  trayicon.py
copyboard/application/: __init__.py  copyboardservice.py  events.py
copyboard/domain/: __init__.py  clipping.py  clippingclassifier.py  clippinghistory.py  content.py  ports.py
tests/: conftest.py  fakes.py  test_config_loading.py  test_package_imports.py
tests/adapters/: test_clipboardechoguard.py  test_clippingdragdata.py  test_processdetach.py  test_pynputhotkeybinder.py  test_qtclipboard.py  test_tempdirvault.py
tests/application/: test_copyboardservice.py
tests/domain/: test_clipping.py  test_clippingclassifier.py  test_clippinghistory.py
tests/ui/: conftest.py  test_apptheme.py  test_mainwindow.py  test_trayicon.py
