[project]
name = "copyboard"
version = "0.1.0"
description = "A cross-platform tray app that shows a live view of your recent clipboard clippings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "pynput>=1.7",
    "typing-extensions>=4.10",
]

[project.scripts]
copyboard = "copyboard.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copyboard"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["copyboard", "tests"]

[[tool.mypy.overrides]]
module = ["PySide6.*", "pynput.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
